--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="revisit-after" content="7 days">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
+    <meta name="google-site-verification" content="VrHXObUkDKEInM9khW0FIYNaaie7xEW0WILi9bxI0NE" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://example.com/rise-all-in-one-entertainment-apps-smartphones">
