--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
         <section class="conclusion-section">
             <h2 class="conclusion-title">The Future is Unified</h2>
-            <p class="conclusion-content">As mobile technology continues to advance, all-in-one entertainment apps are expected to play an even larger role in digital consumption. Their rise highlights a shift toward unified experiences that prioritize ease of use, speed, and minimal friction—qualities that modern smartphone users increasingly demand.</p>
+            <p class="conclusion-content">As mobile technology continues to <a href="https://baber534.github.io/App-Cinema-APK/">advance </a>, all-in-one entertainment apps are expected to play an even larger role in digital consumption. Their rise highlights a shift toward unified experiences that prioritize ease of use, speed, and minimal friction—qualities that modern smartphone users increasingly demand.</p>
         </section>
 
         <footer class="footer">
